# hellfrost

./: .gitmodules  CMakeLists.txt  README.md  build.sh  colors.json  compile_commands.json  conanfile.txt  imgui.ini  init.js  init.sh  justfile  run.sh  tiles.json  tiles_lon.json  todo.txt
cmake/: hellfrost.cmake
data/: config.json
data/tilesets/ascii/: colors.json  example.json  tileset.json
data/tilesets/esoteric/: tiles.json
data/tilesets/vettlingr/: tiles.json
imgui/: CMakeLists.txt
include/: imgui-stl.cpp  imgui-stl.hpp  imgui_entt_entity_editor.hpp  selfpath.hpp
include/EventBus/: Event.hpp  EventBus.cpp  EventBus.hpp  EventHandler.hpp  EventRegisttration.cpp  EventRegisttration.hpp  HandlerRegistration.hpp  Object.hpp
include/app/: application.hpp  console.hpp  editor.hpp  gameData.hpp  ide.hpp  scriptWrappers.hpp
include/app/fonts/: Inconsolata-Regular.cpp  Roboto-Black.cpp  Roboto-BlackItalic.cpp  Roboto-BoldItalic.cpp  Roboto-Italic.cpp  Roboto-Light.cpp  Roboto-LightItalic.cpp  Roboto-Medium.cpp  Roboto-MediumItalic.cpp  Roboto-Regular.cpp  Roboto-Thin.cpp  Roboto-ThinItalic.cpp  fonts.h  material_design_icons.cpp
include/app/style/: theme.cpp  theme.h
include/app/ui/: drawEngine.hpp  layers.hpp  tile.hpp  tilemap.hpp  viewport.hpp
include/game/: ai.hpp  aiManager.hpp  attribute.hpp  cell.hpp  creature.hpp  damage.hpp  damageSpec.hpp  door.hpp  effect.hpp  enemy.hpp  equipment.hpp  events.hpp  fov.hpp  item.hpp  itemSpec.hpp  location.hpp  lootBox.hpp  magic.hpp  object.hpp  player.hpp  slot.hpp  spell.hpp  terrain.hpp
include/game/content/: armor.hpp  artifacts.hpp  enemies.hpp  items.hpp  lastingSpells.hpp  potions.hpp  scrolls.hpp  specs.hpp  spells.hpp  traits.hpp  weapons.hpp
include/hellfrost/: config.hpp  deps.hpp
include/hellfrost/game/: cell.hpp  cell_feature.hpp  cell_spec.hpp  components.hpp  gameData.hpp  gameManager.hpp  location.hpp  region.hpp
include/hellfrost/generator/: generator.hpp
include/hellfrost/ui/: drawEngine.hpp  layers.hpp  tile.hpp  tileSet.hpp  viewport.hpp
include/librandom/: random.hpp
include/lss/: action.hpp  components.hpp  deps.hpp  eventReactor.hpp  gameData.hpp  gameManager.hpp  utils.hpp
include/lss/game/: cell.hpp  creature.hpp  creature_old.hpp  enemy.hpp  events.hpp  item.hpp  itemSpec.hpp  light.hpp  location.hpp  lootBox.hpp  magic.hpp  object.hpp  player.hpp  region.hpp  spell.hpp  terrain.hpp  trait.hpp  trigger.hpp  wearableType.hpp
include/lss/game/content/: armor.hpp  artifacts.hpp  enemies.hpp  items.hpp  potions.hpp  scrolls.hpp  spells.hpp  weapons.hpp
include/lss/generator/: generator.hpp  lootTable.hpp  mapUtils.hpp  primirives.hpp  room.hpp  spawnTable.hpp
include/lua/: logger.hpp
libs/: cereal_json.hpp
libs/imgui-etc/: imgui-stl.cpp  imgui-stl.hpp  imgui_entt_entity_editor.hpp
libs/liblog/: CMakeLists.txt  fmt  liblog.hpp  liblog_test.cpp
libs/librandom/: random.hpp
scripts/: config.lua  draw.lua  init.lua  test.lua
scripts/entities/: bush.lua
scripts/features/: blood_ponds.lua  bones.lua  bushes.lua  cave_passage.lua  crates.lua  doors.lua  enemies.lua  grass.lua  loot.lua  mushrooms.lua  ponds.lua  river.lua  stones.lua  torches.lua
scripts/locations/: cavern.lua  dungeon.lua  ice_cavern.lua  mix.lua
scripts/rooms/: altar_room.lua  altar_room_small.lua  blood_field.lua  corrupt_field.lua  house.lua  ice_field.lua  lake.lua  mushroom_rings.lua  statue.lua  void.lua
src/: application.cpp  application.hpp  console.cpp  controls.cpp  deps.cpp  drawEngine.cpp  editor.cpp  layers.cpp  lua.cpp  main.cpp  tilemap.cpp  viewport.cpp
src/editor/: console.cpp  console.hpp  duk_console.cpp  editor.cpp  editor.hpp
src/fonts/: Inconsolata-Bold.cpp  Roboto-Bold.cpp
src/game/: cell.cpp  creature.cpp  creature_old.cpp  door.cpp  enemy.cpp  equipment.cpp  gameData.cpp  gameManager.cpp  item.cpp  location.cpp  player.cpp  region.cpp  room.cpp  spell.cpp
src/generator/: generator.cpp
src/hellfrost/game/: cell.cpp  gameManager.cpp  location.cpp
src/hellfrost/generator/: generator.cpp
src/hellfrost/ui/: drawEngine.cpp  layers.cpp
src/style/: theme.cpp  theme.h
tilesets/: Mephs Map Tileset.rar
tilesets/ascii/: colors.json  tiles.json
tilesets/boxy/: colors.json  tiles.json
tilesets/esoteric/: colors.json  tiles.json
tilesets/legendary/: colors.json  tiles.json
tilesets/lonesome/: colors.json  tiles.json
tilesets/midsummer/: colors.json  tiles.json
tilesets/spacefox/: colors.json  tiles.json
tilesets/vettlingr/: colors.json  tiles.json
